src/kcms/options/mouse.h
@@ -44,9 +44,6 @@ public:
 
     void save() override;
 
-    bool isDefaults() const;
-    bool isSaveNeeded() const;
-
 protected:
     void initialize(KWinOptionsSettings *settings);
 
