src/kcms/options/windows.h
@@ -64,9 +64,6 @@ public:
     void save() override;
     void defaults() override;
 
-    bool isDefaults() const;
-    bool isSaveNeeded() const;
-
 protected:
     void initialize(KWinOptionsSettings *settings);
 
@@ -77,8 +74,6 @@ private Q_SLOTS:
 
 private:
     bool standAlone;
-    bool m_unmanagedChangeState = false;
-    bool m_unmanagedDefaultState = true;
 
     KWinFocusConfigForm *m_ui;
     KWinOptionsSettings *m_settings;
@@ -93,9 +88,6 @@ public:
     KMovingConfig(bool _standAlone, KWinOptionsSettings *settings, QWidget *parent);
 
     void save() override;
-
-    bool isDefaults() const;
-    bool isSaveNeeded() const;
 
 protected:
     void initialize(KWinOptionsSettings *settings);
@@ -113,9 +105,6 @@ public:
     KAdvancedConfig(bool _standAlone, KWinOptionsSettings *settings, KWinOptionsKDEGlobalsSettings *globalSettings, QWidget *parent);
 
     void save() override;
-
-    bool isDefaults() const;
-    bool isSaveNeeded() const;
 
 protected:
     void initialize(KWinOptionsSettings *settings, KWinOptionsKDEGlobalsSettings *globalSettings);
